; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_release_all_keys.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_release_all_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_x11_state* }
%struct.vo_x11_state = type { i32, i32, i64 }

@MP_INPUT_RELEASE_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @release_all_keys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_all_keys(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.vo_x11_state*, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %4 = load %struct.vo*, %struct.vo** %2, align 8
  %5 = getelementptr inbounds %struct.vo, %struct.vo* %4, i32 0, i32 0
  %6 = load %struct.vo_x11_state*, %struct.vo_x11_state** %5, align 8
  store %struct.vo_x11_state* %6, %struct.vo_x11_state** %3, align 8
  %7 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %8 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %13 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MP_INPUT_RELEASE_ALL, align 4
  %16 = call i32 @mp_input_put_key(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %11, %1
  %18 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %19 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %18, i32 0, i32 0
  store i32 0, i32* %19, align 8
  ret void
}

declare dso_local i32 @mp_input_put_key(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
